ipc/ipdl/test/ipdl/error/PInconsistentMoveOnly.ipdl
//error: inconsistent moveonly status of type `mozilla::ipc::SomeMoveonlyType`

[MoveOnly] using class mozilla::ipc::SomeMoveonlyType from "SomeFile.h";
using class mozilla::ipc::SomeMoveonlyType from "SomeFile.h";

protocol PInconsistentMoveOnly {
child:
  async SomeMessage();
};
